--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <script src = '/dist/main.js' defer></script>
         <style>
             table {
-                table-layout: fixed ;
-                width: 100% ;
+                table-layout: auto;
+                width: 100%;
             }
-            td {
-                width: 20% ;
-            }
+            /* td:first-child {
+                width: 50px;
+            } */
             .myTable th {
                 text-align: left;
             }
