commas added to current face

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
                 table-layout: auto;
                 width: 100%;
             }
-            .myTable th {
+            .myTable th:first-child {
                 text-align: left;
+            }
+            .myTable th {
+                text-align: right;
+            }
+            
+
+            .myTable td:first-child {
+                text-align: left;
+            }
+            .myTable td {
+                text-align: right;
             }
 
         </style>
